--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,5 @@ vaderSentiment
 # pip install torch==1.12.1+cu113 torchvision==0.13.1+cu113 torchaudio==0.12.1 --extra-index-url https://download.pytorch.org/whl/cu113
 nltk
 kafka-python
+matplotlib
+tensorflow
