--- a/requirements.txt
+++ b/requirements.txt
@@ -2,13 +2,11 @@ selenium
 webdriver-manager
 packaging
 beautifulsoup4
-# model
 transformers
 vaderSentiment
 # pip install torch==1.12.1+cu113 torchvision==0.13.1+cu113 torchaudio==0.12.1 --extra-index-url https://download.pytorch.org/whl/cu113
 nltk
 kafka-python
 matplotlib
-tensorflow
-# pyspark
-pyspark==2.4.6
+pyspark==3.3.1
+confluent-kafka==1.9.2
